# libobject

./: README  configure.ac  libobject.pc  libobject.pc.in  package.mk
include/: array.h  array_iterator.h  boolean.h  dumper.h  foreach.h  hash.h  hash_iterator.h  integer.h  iterator.h  json.h  object.h  real.h  string.h  type.h
src/: Makefile  Makefile.in  array.c  array_iterator.c  boolean.c  dumper.c  exception.h  hash.c  hash_iterator.c  integer.c  iterator.c  json.c  log.h  malloc.c  malloc.h  object.c  real.c  string.c  type.c  utils.c  utils.h
t/: Makefile  Makefile.in  array.t.c  boolean.t.c  copy.t.c  dumper.t.c  hash.t.c  integer.t.c  json.t.c  leakcheck.sh  object.t.c  real.t.c  string.t.c  tap.h  test_array.c  test_boolean.c  test_dumper.c  test_hash.c  test_integer.c  test_json.c  test_json.json  test_object.c  test_real.c  test_string.c  zz-memcheck.t
